Update favicon && Update domain

--- a/public/404.html
+++ b/public/404.html
@@ -93,7 +93,7 @@
 
 <div class="error-container">
   <h1>404</h1>
-  <p class="return">Take me back to <a href="/">359sun.top</a></p>
+  <p class="return">Take me back to <a href="/">yakir.top</a></p>
 </div>
 
 </body>
